--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/microservices": "^10.4.8",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
     "pg": "^8.13.1",
+    "prisma": "^5.22.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
