--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://postgres:password@postgres:5432/mydb?schema=public
+# DATABASE_URL=postgresql://username:password@host:port/database?schema=public
