--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.1",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.8",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
