--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql://postgres:password@postgres:5432/mydb?schema=public
-# DATABASE_URL=postgresql://username:password@host:port/database?schema=public
+DATABASE_URL=postgresql://postgres:password@soul-sync-api_postgres_1:5432/mydb?schema=public
