--- a/package.json
+++ b/package.json
@@ -26,19 +26,22 @@
     "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.8",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
     "argon2": "^0.41.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "google-auth-library": "^9.15.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "redis": "^4.7.0",
@@ -51,8 +54,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^22.9.0",
-    "@types/passport-jwt": "^4.0.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
@@ -68,7 +69,6 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
@@ -89,5 +89,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
