--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.4.8",
     "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.8",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
