--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.8",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.8",
     "@nestjs/graphql": "^12.2.1",
@@ -31,9 +31,7 @@
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
     "argon2": "^0.41.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "google-auth-library": "^9.15.0",
+    "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.0",
@@ -51,8 +49,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^22.9.0",
-    "@types/passport-jwt": "^4.0.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
@@ -68,7 +64,6 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
