--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 DATABASE_URL="postgresql://<username>:<password>@<host>:<port>/<database>?schema=<schema>"
 NEXTAUTH_SECRET="<your-nextauth-secret>"
+
 JWT_SECRET="<your-jwt-secret>"
+JWT_REFRESH_SECRET="<your-jwt-refresh-secret>"
 JWT_EXPIRATION="3600s"
+
 GOOGLE_CLIENT_ID="<your-google-client-id>"
 GOOGLE_CLIENT_SECRET="<your-google-client-secret>"
 GOOGLE_REDIRECT_URI="<your-google-redirect-uri>"
