--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "google-auth-library": "^9.15.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
+    "nestjs-telegraf": "^2.8.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -47,7 +48,8 @@
     "prisma": "^5.22.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
