--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,10 +33,12 @@
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
     "argon2": "^0.41.1",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.0",
+    "grammy": "^1.33.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
     "nestjs-telegraf": "^2.8.1",
