--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,9 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.8",
+    "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.8",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
@@ -32,7 +32,6 @@
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^5.22.0",
     "amqplib": "^0.10.4",
-    "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
