--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,3 +25,6 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+      
+      - name: Format Check
+        run: npm run format:check
