--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.4.8",
     "@nestjs/config": "^3.3.0",
@@ -59,6 +60,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
+    "@types/faker": "^6.6.8",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.3.1",
