Update PM2 process name in production deployment workflow for consistency

--- a/.github/workflows/deploy.production.yml
+++ b/.github/workflows/deploy.production.yml
@@ -28,5 +28,5 @@ jobs:
             git pull
             npm install
             npm run build
-            pm2 delete dev-soul-sync-api
+            pm2 delete soul-sync-api
             pm2 start dist/main.js --name soul-sync-api
