--- a/.github/workflows/deploy.production.yml
+++ b/.github/workflows/deploy.production.yml
@@ -29,4 +29,4 @@ jobs:
             npm install
             npm run build
             pm2 delete soul-sync-api
-            pm2 start dist/main.js --name soul-sync-api
+            pm2 start dist/src/main.js --name soul-sync-api
