--- a/.github/workflows/deploy.production.yml
+++ b/.github/workflows/deploy.production.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: Preparing Server
+    name: Preparing Prod Server
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
