Add Prisma migration reset command to deployment workflows and adjust seed data batch sizes

--- a/.github/workflows/deploy.staging.yml
+++ b/.github/workflows/deploy.staging.yml
@@ -28,5 +28,6 @@ jobs:
             git pull
             npm install
             npm run build
+            npx prisma migrate reset --force
             pm2 delete dev-soul-sync-api
             pm2 start dist/src/main.js --name dev-soul-sync-api
