--- a/.github/workflows/deploy.production.yml
+++ b/.github/workflows/deploy.production.yml
@@ -28,5 +28,6 @@ jobs:
             git pull
             npm install
             npm run build
+            npx prisma migrate reset --force
             pm2 delete soul-sync-api
             pm2 start dist/src/main.js --name soul-sync-api
