--- a/package.json
+++ b/package.json
@@ -30,18 +30,22 @@
     "@nestjs/graphql": "^12.2.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^10.4.8",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.22.0",
-    "amqplib": "^0.10.4",
+    "@types/ioredis": "^4.28.10",
+    "amqplib": "^0.10.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "google-auth-library": "^9.15.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
+    "ioredis": "^5.4.2",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
