Add chat and message modules with services, DTOs, and types; update environment variables and seed data

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ JWT_EXPIRATION="3600s"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 GOOGLE_CALLBACK_URL=""
+
+WEB_CALLBACK_URL=""
+RABBITMQ_URL=""
+CHAT_PORT=""
+HOST_URL=""
