the docker was troubling me so I fixed the configuration like (RABBITMQ_URL and reddis host, bcrypt to bcryptjs) and also in the package.json I changed this(start:prod: node dist/main) to this (start:prod: node dist/src/main).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      RABBITMQ_URL: amqp://rabbitmq:5672
+      RABBITMQ_URL: amqp://user:password@rabbitmq:5672
 
   postgres:
     image: postgres
