--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
     "google-auth-library": "^9.15.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
