updated the .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-PORT=8000
+PORT=""
 DATABASE_URL=""
 NEXTAUTH_SECRET=""
 
 JWT_SECRET=""
 JWT_REFRESH_SECRET=""
-JWT_EXPIRATION="3600s"
+JWT_EXPIRATION=""
 
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
@@ -14,3 +14,10 @@ WEB_CALLBACK_URL=""
 RABBITMQ_URL=""
 CHAT_PORT=""
 HOST_URL=""
+DEFAULT_MENTOR_ID=""
+
+CHAT_URL=""
+REDIS_HOST=""
+REDIS_PORT=""
+
+TELEGRAM_BOT_TOKEN=""
