--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/faker": "^6.6.8",
     "@types/jest": "^29.5.2",
@@ -85,7 +84,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.3"
+    "typescript": "5.1"
   },
   "jest": {
     "moduleFileExtensions": [
