--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "twilio": "^5.4.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
