--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/websockets": "^10.4.15",
     "@prisma/client": "^5.22.0",
     "@types/ioredis": "^4.28.10",
+    "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
