--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,8 @@ services:
       context: .
     platform: linux/amd64
     environment:
-      - RABBITMQ_URL=${RABBITMQ_URL}
+      RABBITMQ_URL: amqp://user:password@rabbitmq:5672
+      DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
     command: ["node", "dist/src/apps/consumers/chat-consumer/main.js"]
 
   database-consumer:
@@ -65,7 +66,8 @@ services:
       context: .
     platform: linux/amd64
     environment:
-      - RABBITMQ_URL=${RABBITMQ_URL}
+       RABBITMQ_URL: amqp://user:password@rabbitmq:5672
+       DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
     command: ["node", "dist/src/apps/consumers/database-consumer/main.js"]
 
 volumes:
