configured docker for the database microservice.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       RABBITMQ_URL: amqp://user:password@rabbitmq:5672
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/health || exit 1"]
 
   postgres:
     image: postgres
@@ -64,7 +66,14 @@ services:
   database-consumer:
     build:
       context: .
+    volumes:
+      - .:/app
     platform: linux/amd64
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
     environment:
        RABBITMQ_URL: amqp://user:password@rabbitmq:5672
        DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
