--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,8 @@ services:
     environment:
        RABBITMQ_URL: amqp://user:password@rabbitmq:5672
        DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
+       REDIS_HOST: redis
+       REDIS_PORT: 6379
     command: ["node", "dist/src/apps/consumers/message-consumer/main.js"]
 volumes:
   postgres_data:
