--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "prisma": "^5.22.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
