--- a/.github/workflows/deploy.staging.yml
+++ b/.github/workflows/deploy.staging.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: Preparing Dev Server
+    name: Preparing Dev
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
