--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,5 +100,21 @@ services:
       DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
     command: ['node', 'dist/src/apps/consumers/message-consumers/main.js']
 
+  moderator:
+    build:
+      context: .
+    volumes:
+      - .:/app
+    platform: linux/amd64
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
+    environment:
+      RABBITMQ_URL: amqp://user:password@rabbitmq:5672
+      DATABASE_URL: postgres://postgres:password@postgres:5432/mydb?schema=public
+    command: ['node', 'dist/src/apps/moderator/main.js']
+
 volumes:
   postgres_data:
